corrects error with the name of the link

--- a/catalog.html
+++ b/catalog.html
@@ -166,7 +166,7 @@
     <main class="catalog-main container">
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
-          <a class="breadcrumbs-link" href="index.html">Main page</a>
+          <a class="breadcrumbs-link" href="index.html">Home page</a>
         </li>
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="catalog.html">Catalog</a>
