corrects pages titles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
     <link href="styles/styles.css" rel="stylesheet">
-    <title>HTML Academy: Gllacy - main page</title>
+    <title>HTML Academy: Gllacy&nbsp;- home page</title>
   </head>
   <body class="page page-main">
     <header class="page-header container">
