--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
     <link href="styles/styles.css" rel="stylesheet">
-    <title>HTML Academy: Gllacy - catalog page</title>
+    <title>HTML Academy: Gllacy&nbsp;- catalog page</title>
   </head>
   <body>
     <header class="page-header container">
