--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                     </div>
                     <dl class="cart-link-popover-item-description-list">
                       <dt class="cart-link-popover-item-description-title">Raspberry</dt>
-                      <dd class="cart-link-popover-item-description-definition">1&nbsp;кg х 310&nbsp;₽</dd>
+                      <dd class="cart-link-popover-item-description-definition">1&nbsp;kg х 2.3&nbsp;$</dd>
                     </dl>
-                    <span class="cart-link-popover-item-price">310&nbsp;₽</span>
+                    <span class="cart-link-popover-item-price">2.3&nbsp;$</span>
                   </a>  
                   <button class="cart-link-popover-delete-item-btn" type="button">
                     <span class="visually-hidden">Remove from&nbsp;cart</span>
@@ -139,9 +139,9 @@
                     </div>
                     <dl class="cart-link-popover-item-description-list">
                       <dt class="cart-link-popover-item-description-title">Bubble&nbsp;gum</dt>
-                      <dd class="cart-link-popover-item-description-definition">1,5&nbsp;кg х 320&nbsp;₽</dd>
+                      <dd class="cart-link-popover-item-description-definition">1,5&nbsp;kg х 2.35&nbsp;$</dd>
                     </dl>
-                    <span class="cart-link-popover-item-price">480&nbsp;₽</span>
+                    <span class="cart-link-popover-item-price">3.5&nbsp;$</span>
                   </a>
                   <button class="cart-link-popover-delete-item-btn" type="button">
                     <span class="visually-hidden">Remove from&nbsp;cart</span>
@@ -153,7 +153,7 @@
                   <span>Checkout</span>
                   <span class="btn-loading-circle"></span>
                 </a>
-                <span class="cart-link-popover-order-result-price">Total: 790 ₽</span>
+                <span class="cart-link-popover-order-result-price">Total: 5.8&nbsp;$</span>
               </div>
             </div>
             <div class="header-popover cart-link-popover cart-free-link-popover">
@@ -295,7 +295,7 @@
             </a>    
             <p class="catalog-card-text">Creamy ice cream with&nbsp;raspberry jam</p>
             <div class="catalog-card-bottom">
-              <span class="catalog-card-price">310&nbsp;₽/кg</span>
+              <span class="catalog-card-price">2.3&nbsp;$/kg</span>
               <button class="to-cart-btn" type="button">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Cart icon.">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="currentColor"/>
@@ -312,7 +312,7 @@
             </a>    
             <p class="catalog-card-text">Pistachio ice cream with&nbsp;chocolate pieces</p>
             <div class="catalog-card-bottom">
-              <span class="catalog-card-price">340&nbsp;₽/кg</span>
+              <span class="catalog-card-price">2.5&nbsp;$/kg</span>
               <button class="to-cart-btn" type="button">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Cart icon.">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="currentColor"/>
@@ -329,7 +329,7 @@
             </a>    
             <p class="catalog-card-text">Creme brulee with&nbsp;blueberry jam</p>
             <div class="catalog-card-bottom">
-              <span class="catalog-card-price">330&nbsp;₽/кg</span>
+              <span class="catalog-card-price">2.4&nbsp;$/kg</span>
               <button class="to-cart-btn" type="button">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Cart icon.">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="currentColor"/>
@@ -346,7 +346,7 @@
             </a>    
             <p class="catalog-card-text">Vanilla ice cream with&nbsp;sweet sprinkles</p>
             <div class="catalog-card-bottom">
-              <span class="catalog-card-price">320&nbsp;₽/кg</span>
+              <span class="catalog-card-price">2.35&nbsp;$/kg</span>
               <button class="to-cart-btn" type="button">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Cart icon.">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="currentColor"/>
